# til-page-builder

./: .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.toml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  python-app.yml
assets/: readme_logo.html
examples/: long-markdown.md  text.txt  til-argparse-markdown.md  til-argparse.txt  til-home.txt  til-yattag.md  til-yattag.txt
examples/nested/: text.txt
integration/: snapshots.py  test_integration.py
src/: 1.md  2.txt  convert.txt  til-builder_main.py  til_builder_main.py  version.py
src/builder/: html_builder.py  line_queries.py  markdown_parser.py  markdown_processor.py
src/builder/toc_generator/: heading_item.py  index.py  toc.py
src/models/: file.py  html_file.py
src/til_page_builder/: cli.py  til_builder_main.py  version.py
src/til_page_builder/builder/: html_builder.py  line_queries.py
src/til_page_builder/builder/toc_generator/: toc.py
src/til_page_builder/models/: html_file.py
src/til_page_builder/utils/: helper_functions.py
src/utils/: commandline.py  helper_functions.py
tests/builder/toc_generator/: test_heading_item.py
tests/utils/: test_commandline.py
themes/: theme.css
