[project]
name = "til-page-builder"
version = "1.1.3"
authors = [
  { name="Amnish Singh Arora", email="amnishsingh04@gmail.com" },
]
description = "A command-line tool for authoring \"Today I Learned\" posts in Markdown, which can be converted to HTML for publishing on the web."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "yattag==1.15.1",
    "tomli==2.2.1",
]

[tool.rye.scripts]
cli = "python src/til_page_builder/cli.py"
lint = ["pylint", "src/til_page_builder", "tests/", "integration/"]
test = "pytest"
test-coverage = ["pytest", "--cov=src"]
run-failed-tests = ["pytest", "--last-failed "]
test-watch = "ptw"
format = ["black", "."]
format-check = ["black", "--check", "."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black==23.10.1",
    "pylint==3.0.2",
    "pytest==7.4.3",
    "pytest-watch==4.2.0",
    "pytest-cov==4.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/til_page_builder"]
